[project]
name = "model-center"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.121.2",
    "uvicorn==0.38.0",
    "transformers==4.57.3",
    "diffusers==0.36.0",
    "accelerate==1.12.0"
]

[project.optional-dependencies]
cuda = [
    "torch==2.9.1+cu129",
    "torchaudio==2.9.1+cu129",
    "torchvision==0.24.1+cu129"
]
rocm = [
    "torch==2.9.1+rocm6.4",
    "torchaudio==2.9.1+rocm6.4",
    "torchvision==0.24.1+rocm6.4"
]


[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu129"
priority = "supplemental"
